--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "typescript": "^5.4.5"
   },
   "peerDependencies": {
     "react": "^18.3.0"
