--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "node-sass": "^9.0.0",
+    "postcss": "^8.4.38",
     "react": "^18.3.0",
     "rollup": "^4.16.4",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-scss": "^4.0.0",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5"
   },
@@ -33,6 +38,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.15.15"
+    "@mui/material": "^5.15.15",
+    "classnames": "^2.5.1",
+    "sass": "^1.75.0"
   }
 }
