--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
+    "react-test-renderer": "^18.2.0",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@types/react-test-renderer": "^18.0.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.3.0",
     "autoprefixer": "^10.4.19",
     "node-sass": "^9.0.0",
@@ -31,15 +35,13 @@
     "rollup-plugin-scss": "^3.0.0",
     "sass": "^1.75.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "classnames": "^2.5.1"
   },
   "peerDependencies": {
-    "react": "^18.3.0"
-  },
-  "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
-    "classnames": "^2.5.1"
+    "react": "^18.3.0"
   }
 }
