--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "types": "dist/index.d.ts",
   "scripts": {
-    "rollup": "rollup -c --bundleConfigAsCjs"
+    "build": "rollup -c --bundleConfigAsCjs"
   },
   "keywords": [],
   "author": "",
@@ -18,16 +18,17 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
-    "react-test-renderer": "^18.2.0",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@types/react-test-renderer": "^18.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.3.0",
+    "@types/react-test-renderer": "^18.0.1",
     "autoprefixer": "^10.4.19",
+    "classnames": "^2.5.1",
     "node-sass": "^9.0.0",
     "postcss": "^8.4.38",
     "react": "^18.3.0",
+    "react-test-renderer": "^18.2.0",
     "rollup": "^4.16.4",
     "rollup-plugin-dts": "^6.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -35,13 +36,13 @@
     "rollup-plugin-scss": "^3.0.0",
     "sass": "^1.75.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.4.5",
-    "classnames": "^2.5.1"
+    "typescript": "^5.4.5"
   },
   "peerDependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "@mui/icons-material": "^5.15.16",
     "react": "^18.3.0"
   }
 }
