--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,31 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "ESNext"],
+    "allowJs": true,
     "skipLibCheck": true,
-    "rootDir": ".",
-    "jsx": "react",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "noEmit": true,
+    "jsx": "react-jsx",
     "declaration": true,
     "declarationDir": "types",
-    "sourceMap": true,
+    // "sourceMap": true
     "outDir": "dist",
-    "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true,
-    "emitDeclarationOnly": true,
-    "baseUrl": "./",
-    "paths": {
-      "src/*": ["src/*"]
-    }
-  }
+    // "moduleResolution": "Node",
+    "rootDir": "."
+    // "emitDeclarationOnly": true,
+    // "baseUrl": "./",
+    // "paths": {
+    //   "src/*": ["src/*"]
+    // }
+  },
+  "include": ["src"]
 }
